<resources>
    <string name="app_name">My Commerce</string>
    <!--items-->
    <string name="new_product">NUEVO PRODUCTO</string>

    <!--new product flow-->
    <string name="price">Price:</string>
    <string name="stock">Stock:</string>
    <string name="title_dialog_new_product">NUEVO PRODUCTO</string>
    <string name="btn_cancel">CANCELAR</string>
    <string name="btn_create">GUARDAR</string>
    <string name="new_product_name">Nombre</string>
    <string name="new_product_description">Descripción</string>
    <string name="new_product_code">Código</string>
    <string name="new_product_stock">Stock</string>
    <string name="new_product_price">Precio</string>

    <string name="detail_product_description_string">Descripción</string>
    <string name="detail_product_stock_string">Stock</string>
    <string name="detail_product_price_string">Precio</string>
    <string name="detail_product_code_string">Código</string>
    <string name="detail_edit_product">EDITAR</string>
    <string name="detail_remove_product">Eliminar</string>
    <string name="dialog_title_delete">¿Desea descartar este Producto?</string>
    <string name="btn_discard">DESCARTAR</string>

    <style name="TitleProductStyle">
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">@color/colorTextTitle</item>
    </style>
</resources>
